src/components/Dashboard/DashboardTile/DashboardTile.scss
.react-autoql-dashboard .react-autoql-dashboard-tile {
  background: var(--react-autoql-background-color-primary, #fff);
  color: var(--react-autoql-text-color-primary, rgb(64, 64, 64));
  font-family: var(--react-autoql-font-family), sans-serif;
  height: 100%;
  overflow: hidden;

  border-radius: 4px;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
}

.react-autoql-dashboard-tile-inner-div {
  height: 100%;
  width: 100%;
  background: inherit;
  position: relative;
  text-align: center;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  align-items: center;
}

// Drag handles
.react-autoql-dashboard-tile-drag-handle {
  transition: opacity 0.3s ease;
  position: absolute;
  background-color: var(--react-autoql-border-color, #f7f7f7);
  cursor: move;
  opacity: 0;

  &.top {
    top: 0;
    left: 0;
    width: 100%;
    height: 15px;
  }
  &.bottom {
    bottom: 0;
    left: 0;
    width: 100%;
    height: 15px;
  }
  &.left {
    top: 0;
    left: 0;
    width: 15px;
    height: 100%;
  }
  &.right {
    top: 0;
    right: 0;
    width: 15px;
    height: 100%;
  }
}
.react-autoql-dashboard-tile:hover .react-autoql-dashboard-tile-drag-handle {
  opacity: 1;
}

// Toolbars
.react-autoql-dashboard-tile .autoql-options-toolbar {
  transition: opacity 0.3s ease, color 0.3s ease;
  visibility: hidden;
  opacity: 0;
  bottom: 8px;
  right: 8px;
  z-index: 1;
}

.dashboard-tile-viz-toolbar-container {
  transition: opacity 0.3s ease, color 0.3s ease;
  color: var(--react-autoql-accent-color);
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 7px;
  z-index: 1;
  opacity: 0;
  visibility: hidden;

  .viz-toolbar,
  .split-view-btn {
    position: relative;
    display: inline-block;
    background: var(--react-autoql-background-color-primary);
  }

  .split-view-btn {
    margin-right: 7px;
    .react-autoql-icon {
      font-size: 14px;
    }
  }
}
// For the second query input expand button
.split-view-btn {
  z-index: 1;
}

.split-view-query-btn {
  transition: opacity 0.3s ease, color 0.3s ease;
  color: var(--react-autoql-accent-color);
  position: absolute;
  top: 7px;
  left: 7px;
  bottom: unset;
  z-index: 1;
  visibility: hidden;
  opacity: 0;
}

.react-autoql-dashboard-tile:hover .dashboard-tile-viz-toolbar-container,
.react-autoql-dashboard-tile:hover .split-view-query-btn,
.react-autoql-dashboard-tile:hover .autoql-options-toolbar {
  visibility: visible;
  opacity: 1;
}

.react-autoql-dashboard-tile-inner-div .single-value-response {
  font-size: 32px;
  margin-top: -6px;
  opacity: 0.9;
}

.react-autoql-dashboard-tile-inner-div .dashboard-tile-response-wrapper {
  height: calc(100% - 47px);
  width: 100%;
  padding-top: 0;
  background: inherit;

  .query-output-error-message {
    opacity: 0.8;
  }

  .layout-splitter {
    height: 1px !important;
    color: var(--react-autoql-border-color);
    opacity: 0.3;
    pointer-events: none;
  }

  .react-autoql-table {
    opacity: 0.9;
    color: var(--react-autoql-text-color-primary);
    font-size: 11px;
  }
}
.react-autoql-dashboard-tile-inner-div.split .dashboard-tile-response-wrapper {
  padding: 0;
}
.react-autoql-dashboard-tile-inner-div
  .dashboard-tile-response-wrapper.editing {
  .layout-splitter {
    display: block;
    pointer-events: unset;
    height: 4px !important;
    color: var(--react-autoql-text-color-primary);
    opacity: 0.8;
  }
}

/* Safetynet styles specific to dashboard tiles */
.react-autoql-dashboard-tile-inner-div
  .dashboard-tile-response-wrapper.editing {
  height: 100%;
  width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
}
.react-autoql-dashboard-tile-inner-div .react-autoql-query-validation-query {
  white-space: nowrap;
}
.dashboard-tile-response-wrapper.small
  .react-autoql-query-validation-description,
.dashboard-tile-response-wrapper.small
  .react-autoql-suggestion-message-description,
.dashboard-tile-response-wrapper.small
  .react-autoql-query-validation-execute-btn {
  display: none;
}

.dashboard-tile-response-wrapper .dashboard-tile-response-container {
  position: relative;
  height: 100%;
  width: 100%;
  background: inherit;

  cursor: default;

  .react-autoql-table-container {
    padding: 20px;
    padding-top: 15px;
  }

  .react-autoql-response-content-container {
    padding: 7px;
  }
}

.dashboard-tile-title-container {
  width: 100%;
  text-align: left;
  padding: 19px 25px 0 25px;
  height: 47px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  flex-shrink: 0;
  flex-grow: 0;

  .dashboard-tile-title {
    color: var(--react-autoql-accent-color, #26a7df);
  }
}

.dashboard-tile-title-container .dashboard-tile-title {
  font-weight: bold;
  font-size: 14px;
}

.dashboard-tile-edit-wrapper {
  display: flex;
  width: 100%;
  height: 55px;
  padding: 20px 20px 0 25px;
  flex-shrink: 0;
  flex-grow: 0;
}

.dashboard-tile-play-button {
  cursor: default;
  flex-grow: 0;
  flex-shrink: 0;
}
.dashboard-tile-play-button span.react-autoql-icon svg {
  cursor: pointer;
  width: 25px;
  height: 33px;
  margin-left: 10px;
  color: var(--react-autoql-accent-color);
}
.dashboard-tile-play-button.disabled svg {
  opacity: 0.5;
  cursor: not-allowed;
}
.dashboard-tile-play-button:not(.disabled) svg:hover {
  opacity: 0.8;
}

.dashboard-tile-delete-button {
  opacity: 0;
  font-size: 17px;
  color: var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.4));
  position: absolute;
  top: 0px;
  right: 2px;
  cursor: pointer;
  transition: opacity 0.3s ease;
  z-index: 1;
}
.react-grid-item:hover .dashboard-tile-delete-button {
  opacity: 1;
}

.dashboard-tile-loading-container {
  display: flex;
  height: 100%;
  width: 100%;
  padding: 20px;
  align-items: center;
  justify-content: center;
}

.dashboard-tile-title-divider {
  height: 2px;
  background: currentColor;
  width: 75px;
  margin-top: 4px;
  opacity: 0.07;
}
/* ... */

